# flextool

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  NOTICE  OWNERS  README.md  conanfile.py  get_conan_dependencies.cmake  package.json  uncrustify.cfg
cmake/: CommonOptions.cmake  Exports.cmake  Findflextool.cmake  Options.cmake  PlatformChecks.cmake  ProjectFiles.cmake  cmake_externals.cmake  cppcheck.cfg  fetch_cmake_utils.cmake  fetch_conan_auto_install.cmake  global_constants.cmake  parse_version_file.cmake  setup_clang_format.cmake  setup_clang_tidy.cmake  setup_compile_log_level.cmake  setup_compile_warnings.cmake  setup_cppcheck.cmake  setup_cppclean.cmake  setup_iwyu.cmake  setup_misc_files.cmake  setup_oclint.cmake  setup_sanitizers.cmake  setup_thirdparty_libs.cmake  setup_uncrustify.cmake  setup_valgrind.cmake  testRunner.cmake  valgrind.cfg
cmake/iwyu/: boost-all-private.imp  boost-all.imp  iwyu.imp
cmake/modules/: FindCling.cmake
conan/: README.md
conan/profile/: clang.txt  gcc.txt
conan/remotes/: remotes.txt
conan/remotes_disabled_ssl/: remotes.txt
docs/: CMakeLists.txt  Doxyfile-mcss  Doxyfile.in  namespaces.dox
docs/md/: TODO-DebuggingTips.md  TODO-UsingLibFuzzer.md
flextool/test/: run_all_perftests.cc  run_all_unittests.cc
include/flextool/: PluginManager.hpp  ToolPlugin.hpp  app_cmd_options.hpp  app_environment.hpp  base_environment.hpp  boost_command_line.hpp  clang_environment.hpp  clang_tool.hpp  clang_util.hpp  cling_environment.hpp  cmd_environment.hpp  command_line_constants.hpp  path_provider.hpp  plugin_environment.hpp  version.hpp  version.hpp.in
plugin/vue-cli-plugin/: ui.js
resources/configuration_files/: plugins.conf
resources/i18n/: README.md
resources/icu/: README.md
src/: .gitignore  PluginManager.cc  app_cmd_options.cc  app_environment.cc  base_environment.cc  boost_command_line.cc  clang_environment.cc  clang_tool.cc  clang_util.cc  cling_environment.cc  cmd_environment.cc  command_line_constants.cc  main.cc  main_native.cpp  path_provider.cc  plugin_environment.cc
test_package/: CMakeLists.txt  conanfile.py  main.cpp  test_package_cling.cpp
test_package/cmake/: HelperFlextool.cmake
tests/: CMakeLists.txt  dummy_test.cpp  fakeit.test.cpp  gmock.test.cpp  gtest_test_runner.cmake  i18n.test.cpp  main.cpp  perf_test_runner.cmake  pimpl.test.cpp  test_data_files.cmake  test_sources.cmake  testsCommon.h
tests/data/: README.md
tools/: buildConanThirdparty.cmake  run_tool.cmake
